--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Chotto Motto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Changa&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Changa:wght@400;800&display=swap" rel="stylesheet">
   <!-- le link vers le script google fonts vient ici -->
   <link rel="stylesheet" href="./style.css">
 </head>
